--- a/app/index.html
+++ b/app/index.html
@@ -458,6 +458,61 @@
                 </a>
             </div>
         </section>
+        <div class="promo">
+            <div class="container">
+                <div class="promo__inner">
+                    <p class="promo__subtitle">
+                        Style Fashion
+                    </p>
+                    <h3 class="title">
+                        DEAL OF THE DAY
+                    </h3>
+                    <div class="promo__clock" data-time="'2023-05-21'">
+                        <div class="promo__clock-item">
+                            <span class="promo__days"></span>
+                            <div class="promo__text">Days</div>
+                        </div>
+                        <div class="promo__clock-item">
+                            <span class="promo__hours"></span>
+                            <div class="promo__text">Hours</div>
+                        </div>
+                        <div class="promo__clock-item">
+                            <span class="promo__minutes"></span>
+                            <div class="promo__text">Minutes</div>
+                        </div>
+                        <div class="promo__clock-item">
+                            <span class="promo__seconds"></span>
+                            <div class="promo__text">Seconds</div>
+                        </div>
+                    </div>
+                    <a class="promo__link" href="#">SHOP NOW</a>
+                </div>
+            </div>
+        </div>
+        <div class="partners">
+            <div class="container">
+                <ul class="partners__list">
+                    <li class="partners__item">
+                        <img src="images/partners/01.png" alt="partner logo">
+                    </li>
+                    <li class="partners__item">
+                        <img src="images/partners/02.png" alt="partner logo">
+                    </li>
+                    <li class="partners__item">
+                        <img src="images/partners/03.png" alt="partner logo">
+                    </li>
+                    <li class="partners__item">
+                        <img src="images/partners/04.png" alt="partner logo">
+                    </li>
+                    <li class="partners__item">
+                        <img src="images/partners/05.png" alt="partner logo">
+                    </li>
+                    <li class="partners__item">
+                        <img src="images/partners/06.png" alt="partner logo">
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     </main>
     <footer class="footer">
