--- a/app/index.html
+++ b/app/index.html
@@ -262,16 +262,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="4"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="4"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
@@ -297,16 +307,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="4.5"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="4.5"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
@@ -332,16 +352,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="5"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="5"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
@@ -367,16 +397,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="4"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="4"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
@@ -402,16 +442,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="4.5"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="4.5"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
@@ -437,16 +487,26 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="star" data-rateyo-rating="5"></div>
-                        <h4 class="product-item__title">
-                            White Polo Men’s T-Shirt
-                        </h4>
-                        <div class="product-item__price">
-                            <div class="product-item__new-price">
-                                $34.00
+                        <div class="product-item__wrapper-box">
+                            <div class="product-item__box">
+                                <div class="star" data-rateyo-rating="5"></div>
+                                <h4 class="product-item__title">
+                                    White Polo Men’s T-Shirt
+                                </h4>
+                                <div class="product-item__price">
+                                    <div class="product-item__new-price">
+                                        $34.00
+                                    </div>
+                                    <div class="product-item__old-price">
+                                        $27.00
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product-item__old-price">
-                                $27.00
+                            <div class="product-item__content-box">
+                                <p class="product-item__text">
+                                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod  utlitoi labore et dolore magna aliqua.
+                                </p>
+                                <button class="product-item__btn">Add to cart</button>
                             </div>
                         </div>
                     </div>
