added blog page

--- a/app/product.html
+++ b/app/product.html
@@ -440,11 +440,10 @@
                 </h3>
                 <div class="related__items">
                     <div class="product-item">
-                        <div class="product-item__img-box">
+                        <a class="product-item__img-box" href="#">
                             <img class="product-item__images" src="images/product/01.jpg" alt="product" >
-                        </div>
-                        <div class="product-item__wrapper-box">
-                            <div class="product-item__box">
+                        </a>
+                            <a class="product-item__box" href="#">
                                 <div class="star" data-rateyo-rating="5"></div>
                                 <h4 class="product-item__title">
                                     White Polo Men’s T-Shirt
@@ -457,15 +456,13 @@
                                         $27.00
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </a>
                     </div>
                     <div class="product-item">
-                        <div class="product-item__img-box">
+                        <a class="product-item__img-box" href="#">
                             <img class="product-item__images" src="images/product/02.jpg" alt="product" >
-                        </div>
-                        <div class="product-item__wrapper-box">
-                            <div class="product-item__box">
+                        </a>
+                            <a class="product-item__box" href="#">
                                 <div class="star" data-rateyo-rating="5"></div>
                                 <h4 class="product-item__title">
                                     White Polo Men’s T-Shirt
@@ -478,15 +475,13 @@
                                         $27.00
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </a>
                     </div>
-                    <div class="product-item">
-                        <div class="product-item__img-box">
+                    <div class="product-item product-item--sale">
+                        <a class="product-item__img-box" href="#">
                             <img class="product-item__images" src="images/product/03.jpg" alt="product" >
-                        </div>
-                        <div class="product-item__wrapper-box">
-                            <div class="product-item__box">
+                        </a>
+                            <a class="product-item__box" href="#">
                                 <div class="star" data-rateyo-rating="5"></div>
                                 <h4 class="product-item__title">
                                     White Polo Men’s T-Shirt
@@ -499,15 +494,13 @@
                                         $27.00
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </a>
                     </div>
                     <div class="product-item">
-                        <div class="product-item__img-box">
+                        <a class="product-item__img-box" href="#">
                             <img class="product-item__images" src="images/product/04.jpg" alt="product" >
-                        </div>
-                        <div class="product-item__wrapper-box">
-                            <div class="product-item__box">
+                        </a>
+                            <a class="product-item__box" href="#">
                                 <div class="star" data-rateyo-rating="5"></div>
                                 <h4 class="product-item__title">
                                     White Polo Men’s T-Shirt
@@ -520,8 +513,7 @@
                                         $27.00
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </a>
                     </div>
 
                 </div>
