added video on blog page

--- a/app/blog.html
+++ b/app/blog.html
@@ -95,10 +95,12 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="blog-page__item">
-                            <a class="blog-page__item-link" href="#">
-                                <img class="blog-page__img" src="images/blog/page-2.jpg" alt="blog img">
-                            </a>
+                        <div class="blog-page__item blog-page__item-video">
+                            <div class="blog-page__video-popup" style="background-image: url('images/blog/page-2.jpg');">
+                                <a class="blog-page__video-play" href="https://www.youtube.com/watch?v=ReY9smmCDjw" data-fancybox>
+                                    <img src="images/icons/blog_play_btn.png" alt="video play button">
+                                </a>
+                            </div>
                             <div class="blog-page__item-box">
                                 <h4 class="blog-page__item-title">
                                     <a class="blog-page__item-link" href="#">
